Создание базы данных

--- a/CharacterBook/AppShell.xaml
+++ b/CharacterBook/AppShell.xaml
@@ -3,13 +3,13 @@
     x:Class="CharacterBook.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:CharacterBook"
+    xmlns:views="clr-namespace:CharacterBook.Views"
     Shell.FlyoutBehavior="Flyout"
     Title="CharacterBook">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
+        ContentTemplate="{DataTemplate views:MainPage}"
         Route="MainPage" />
 
 </Shell>
