--- a/CharacterBook/Views/CharacterDetailPage.xaml
+++ b/CharacterBook/Views/CharacterDetailPage.xaml
@@ -5,10 +5,6 @@
              x:Class="CharacterBook.Views.CharacterDetailPage"
              Title="Персонаж">
 
-    <ContentPage.BindingContext>
-        <viewmodels:CharacterDetailViewModel />
-    </ContentPage.BindingContext>
-    
     <StackLayout Padding="20">
         <!-- Изображение -->
         <Grid RowSpacing="10">
@@ -35,9 +31,8 @@
                        Keyboard="Numeric"/>
                 
                 <!-- Пол -->
-                <Picker Title="Пол"
-                        Items="{Binding Genders}"
-                        SelectedItem="{Binding Character.Gender}"/>
+                <Entry  Placeholder="Пол"
+                        Text="{Binding Character.Gender}"/>
                 
                 <!-- Вид -->
                 <Entry Placeholder="Вид"
@@ -70,3 +65,4 @@
             </StackLayout>
         </ScrollView>
     </StackLayout>
+</ContentPage>
