Переработка базы данных для постов

--- a/CharacterBook/AppShell.xaml
+++ b/CharacterBook/AppShell.xaml
@@ -8,8 +8,8 @@
     Title="CharacterBook">
 
     <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate views:MainPage}"
-        Route="MainPage" />
+        Title="Персонажи"
+        ContentTemplate="{DataTemplate views:CharacterListPage}"
+        Route="CharacterListPage" />
 
 </Shell>
