--- a/CharacterBook/Views/CharacterListPage.xaml
+++ b/CharacterBook/Views/CharacterListPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodels="clr-namespace:CharacterBook.ViewModels"
-             x:Class="CharacterBook.Views.MainPage">
+             x:Class="CharacterBook.Views.CharacterListPage">
 
     <StackLayout>
         <SearchBar x:Name="searchBar"
