--- a/CharacterBook/Views/CharacterDetailPage.xaml
+++ b/CharacterBook/Views/CharacterDetailPage.xaml
@@ -10,7 +10,8 @@
                    WidthRequest="200" 
                    HeightRequest="200"
                    Aspect="AspectFill"
-                   HorizontalOptions="Center"/>
+                   HorizontalOptions="Center"
+                   Source="{Binding Character.ImageByte}"/>
             <Button Text="Выбрать изображение"
                     HorizontalOptions="Center"
                     Command="{Binding SelectImageCommand}"
