--- a/android/app/src/main/res/xml/mime_types.xml
+++ b/android/app/src/main/res/xml/mime_types.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mime-types>
-    <mime-type>application/vnd.listcharacters.character</mime-type>
-    <mime-type>application/vnd.listcharacters.race</mime-type>
+<mime-types xmlns:android="http://schemas.android.com/apk/res/android">
+    <mime-type android:value="application/vnd.listcharacters.character"/>
+    <mime-type android:value="application/vnd.listcharacters.race"/>
 </mime-types>
